--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,14 @@
 *~
 *.sass-cache
 .env 
+
 # OS or Editor folders
 .DS_Store
 .cache
 .project
 .settings
 .tmproj
+.vscode
 nbproject
 Thumbs.db
 
